# MyConfig---Config-tool

./: .gitignore  CMakeLists.txt  README.md
examples/: example1.ini
include/Config/: Config.hpp  ConfigException.hpp  ConfigParser.hpp
src/: Config.cpp  ConfigException.cpp  ConfigParser.cpp
tests/: config_parse_tests.cpp  main.cpp
